[tool.poetry]
name = "gdrive"
version = "0.1.0"
description = ""
authors = ["Jonathan Newman <j24newman@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gdrive", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.157.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
black = "^24.10.0"
click = "^8.1.8"
setuptools = "^75.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
